--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "json": "^11.0.0",
     "react": "18.2.0",
